# ros2_emulation

./: .gitignore  README.md  README.md.backup  detect_duration.txt  pub_diff.txt  pub_sub_diff.txt
install/: setup.bat  setup.ps1
install/include/ap_interfaces/msg/detail/: pos__functions.c  pos__struct.h  score__rosidl_typesupport_introspection_c.h  score__struct.h  score__type_support.cpp  score__type_support.h
install/lib/: ap_interfaces__rosidl_generator_c.lib  ap_interfaces__rosidl_typesupport_c.lib  ap_interfaces__rosidl_typesupport_cpp.lib  ap_interfaces__rosidl_typesupport_fastrtps_c.lib  ap_interfaces__rosidl_typesupport_fastrtps_cpp.lib  ap_interfaces__rosidl_typesupport_introspection_c.lib
install/share/ap_interfaces/cmake/: ap_interfaces__rosidl_typesupport_cppExport.cmake  ap_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/share/ap_interfaces/launch/: airplay_launch.py
install/share/ap_interfaces/msg/: Pos.idl
ros test out/Assets/: msgbrowser_settings.asset
ros test out/Assets/Resources/: ROSConnectionPrefab.prefab
ros test out/Assets/RosMessages/ApInterfaces/msg/: PosMsg.cs  ScoreMsg.cs
ros test out/Assets/Scenes/: SampleScene.unity  posmessage.cs  unity_ros_test.unity
ros test out/ProjectSettings/: ProjectSettings.asset
src/: ROSLOOP.xlsx  SetPriority.reg  clock.rar  detect_duration.txt  graph30hz.txt  pub_diff.txt  pub_sub_diff.txt  ros2pubdiffwithoutimshow.txt  size.txt
src/ap_interfaces/: CMakeLists.txt  package.xml
src/ap_interfaces/cmake/: FindSpinnaker.cmake
src/ap_interfaces/include/ap_interfaces/: Camera.h  CameraDefs.h  CameraFLIR.h  EventHandler.h  ImageUtilityCCM.h  Spinnaker.h  SpinnakerDefs.h  System.h  TransportLayerDefs.h  TransportLayerInterface.h  TransportLayerStream.h  TransportLayerSystem.h
src/ap_interfaces/include/ap_interfaces/spinc/: CameraDefsC.h  SpinVideoC.h  SpinnakerDefsC.h  SpinnakerPlatformC.h  TransportLayerDefsC.h  TransportLayerStreamC.h  TransportLayerSystemC.h
src/ap_interfaces/launch/: airplay_launch.py
src/ap_interfaces/launch/install/: setup.bat  setup.ps1
src/ap_interfaces/msg/: Button.msg  Pos.msg  Score.msg  Timing.msg
src/ap_interfaces/src/: CameraFLIR.cpp  button.cpp  extrinsics.yml  intrinsics.yml  player_detection.cpp  player_detection_dummy.cpp  player_detection_single.cpp  rfid.cpp  ui.cpp  unity.cpp
src/ap_interfaces/srv/: AddThreeInts.srv  gameinfo.srv
