<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ap_interfaces</name>
    <version>0.0.0</version>
    <description>Airplay pos interfaces</description>
    <maintainer email="ruotongg@umich.edu">ifate</maintainer>
    <license>Apache License 2.0</license>

    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>ros2launch</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
